<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:frostwire="http://schemas.android.com/apk/res-auto">
    <androidx.preference.CheckBoxPreference
        android:key="frostwire.prefs.gui.enable_permanent_status_notification"
        android:summary="@string/notify_frostwire_is_running_summary"
        android:title="@string/notify_frostwire_is_running" />
    <androidx.preference.CheckBoxPreference
        android:key="frostwire.prefs.gui.show_transfers_on_download_start"
        android:title="@string/show_transfers_on_download_start" />
    <androidx.preference.CheckBoxPreference
        android:key="frostwire.prefs.gui.show_new_transfer_dialog"
        android:title="@string/show_new_transfer_dialog" />
    <androidx.preference.CheckBoxPreference
        android:key="frostwire.prefs.gui.vibrate_on_finished_download"
        android:title="@string/vibrate_on_finished_download" />
    <androidx.preference.CheckBoxPreference
        android:key="frostwire.prefs.gui.haptic_feedback_on"
        android:title="@string/haptic_feedback" />
    <androidx.preference.CheckBoxPreference
        android:key="frostwire.prefs.gui.distraction_free_search"
        android:summary="@string/distraction_free_search_results_summary"
        android:title="@string/distraction_free_search_results" />
    <androidx.preference.CheckBoxPreference
        android:key="frostwire.prefs.uxstats.enabled"
        android:summary="@string/anonymous_usage_statistics_summary"
        android:title="@string/anonymous_usage_statistics" />
    <z.zer.tor.media.android.gui.views.preference.ButtonActionPreference
        android:key="frostwire.prefs.internal.clear_index"
        android:summary="@string/clear_search_cache_summary"
        android:title="@string/clear_search_cache"
        frostwire:button_text="@string/clear" />
</androidx.preference.PreferenceScreen>
