<?xml version="1.0" encoding="utf-8"?>

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.preference.PreferenceCategory
        android:key="frostwire.prefs.general"
        android:title="@string/general_settings">
        <androidx.preference.SwitchPreferenceCompat
            android:key="frostwire.prefs.internal.connect_disconnect"
            android:summary="@string/bittorrent_network_summary"
            android:title="@string/bittorrent"/>
        <androidx.preference.SwitchPreferenceCompat
            android:key="frostwire.prefs.network.use_wifi_only"
            android:summary="@string/wifi_networks_only_summary"
            android:title="@string/wifi_networks_only"/>
        <androidx.preference.SwitchPreferenceCompat
            android:key="frostwire.prefs.network.bittorrent_on_vpn_only"
            android:summary="@string/vpn_drop_protection_summary"
            android:title="@string/vpn_drop_protection_title"/>
        <z.zer.tor.media.android.gui.views.preference.KitKatStoragePreference
            android:key="frostwire.prefs.storage.path"
            android:summary="@string/storage_preference_summary"
            android:title="@string/storage_preference_title"/>
        <androidx.preference.Preference
            android:key="frostwire.prefs.storage.path_asf"
            android:summary="@string/storage_preference_summary"
            android:title="@string/storage_preference_title">
            <intent android:action="android.intent.action.OPEN_DOCUMENT_TREE"/>
        </androidx.preference.Preference>
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/search_torrent_settings">
        <androidx.preference.Preference
            android:fragment="z.zer.tor.media.android.gui.fragments.preference.SearchEnginesPreferenceFragment"
            android:title="@string/search_header"/>
        <androidx.preference.Preference
            android:fragment="z.zer.tor.media.android.gui.fragments.preference.TorrentPreferenceFragment"
            android:title="@string/torrent_preferences_header"/>
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>
