<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_main_search"
            android:icon="@drawable/menu_icon_search"
            android:title="@string/search"/>
        <item
            android:id="@+id/menu_main_my_music"
            android:icon="@drawable/menu_icon_my_music"
            android:title="@string/my_music"/>
        <item
            android:id="@+id/menu_main_library"
            android:icon="@drawable/menu_icon_library"
            android:title="@string/my_files"/>
        <item
            android:id="@+id/menu_main_transfers"
            android:icon="@drawable/menu_icon_transfers"
            android:title="@string/transfers"/>
        <item
            android:id="@+id/menu_main_settings"
            android:icon="@drawable/menu_icon_settings"
            android:title="@string/settings"/>
        <item
            android:id="@+id/menu_main_shutdown"
            android:icon="@drawable/menu_icon_exit"
            android:title="@string/exit"/>

        <item
            android:id="@+id/menu_main_footer_spacer_1"
            android:checkable="false"
            android:enabled="false"
            android:orderInCategory="200"
            android:title=""/>

    </group>
</menu>
