<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="horizontal"
    android:weightSum="1.0">

    <!-- left hand icon with gray circle background a-la lollipop. -->
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:background="@drawable/notification_background_circle"
        android:padding="9dp"
        android:src="@mipmap/ic_launcher_round"/>

    <!-- mid section container -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:gravity="start|center_vertical"
        android:orientation="vertical">

        <!-- Top Title -->
        <TextView
            android:id="@+id/view_permanent_status_text_title"
            style="@style/TransfersNotificationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frostwire_is_running"/>

        <!-- transfer container -->
        <LinearLayout
            android:id="@+id/view_permanent_status_transfers_indicators"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- downward arrow in unicode -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="\u2193"
                android:textColor="@color/app_text_secondary"
                android:textSize="14sp"/>

            <!-- downloads @ download rate -->
            <TextView
                android:id="@+id/view_permanent_status_text_downloads"
                style="@style/TransfersNotificationSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_downloads_indicator"/>

            <!-- comma in unicode -->
            <TextView
                style="@style/TransfersNotificationSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="8dp"
                android:text="\u002C"/>

            <!-- upward arrow in unicode -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="\u2191"
                android:textColor="@color/app_text_secondary"
                android:textSize="14sp"/>

            <!-- uploads @ upload rate -->
            <TextView
                android:id="@+id/view_permanent_status_text_uploads"
                style="@style/TransfersNotificationSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="8dp"
                android:text="@string/dummy_uploads_indicator"/>

        </LinearLayout>
    </LinearLayout>

    <!-- Shutdown icon -->

    <ImageView
        android:id="@+id/view_permanent_status_shutdown"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_gravity="right|center_vertical|center"
        android:layout_margin="0dp"
        android:layout_weight="0.2"
        android:background="@color/transparent"
        android:gravity="center_vertical"
        android:scaleType="center"
        android:src="@drawable/notification_shutdown"/>

</LinearLayout>